# focus-lens

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  app.py  pyproject.toml
configs/: default.yaml
docs/: writeup.md
focuslens/: __init__.py  __main__.py  capture.py  classifier.py  config.py  face_mesh.py  labeling.py  logging.py  models.py  notify.py  paths.py  pipeline.py  pose.py  runtime.py  session.py  simulate.py  states.py  viz.py  window.py
focuslens/app/: __init__.py  controller.py  settings.py  shell.py  summary.py
focuslens/context/: __init__.py  active_app.py  activity.py
focuslens/demo/: __init__.py  app.py  inference.py
focuslens/features/: __init__.py  blink.py  body.py  ear.py  extractor.py  gaze.py  head_pose.py  landmarks.py  robust.py
focuslens/focusnet/: __init__.py  ablation.py  classifier.py  continual.py  dataset.py  model.py  train.py
focuslens/gaze/: __init__.py  calibrate_session.py  calibration.py  dataset.py  metrics.py  model.py  predictor.py  train.py
focuslens/intervention/: __init__.py  cox.py  features.py  synthetic.py  timing.py  train.py
scripts/: download_mpiifacegaze.py
tests/: test_ablation.py  test_active_app.py  test_activity.py  test_app_controller.py  test_app_settings.py  test_blink.py  test_body_features.py  test_capture.py  test_classifier.py  test_config.py  test_continual.py  test_cox.py  test_demo.py  test_ear.py  test_extractor.py  test_focusnet_classifier.py  test_focusnet_dataset.py  test_focusnet_model.py  test_focusnet_train.py  test_frame_buffer.py  test_gaze.py  test_gaze_calibration.py  test_gaze_dataset.py  test_gaze_metrics.py  test_gaze_model.py  test_gaze_predictor.py  test_gaze_robust.py  test_gaze_train.py  test_head_pose.py  test_intervention_controller.py  test_intervention_features.py  test_intervention_timing.py  test_labeling.py  test_pipeline.py  test_runtime.py  test_session.py  test_session_labels.py  test_session_summary.py  test_version.py  test_viz.py  (+1 more)
