[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focuslens"
version = "0.1.0"
description = "FocusLens — on-device webcam attention-theft detector"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "aman shah" }]
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "mediapipe>=0.10.14",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Model training (Phases 4, 7–9) — heavy, not needed for live/simulate.
train = [
    "torch>=2.2",
]
# Optional plotting for ablation/summary figures (Phases 8, 10).
plot = [
    "matplotlib>=3.8",
]
# Public Gradio demo (Phase 11).
demo = [
    "gradio>=4.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.7",
    "torch>=2.2",
]

[project.scripts]
focuslens = "focuslens.__main__:main"

[tool.setuptools.packages.find]
include = ["focuslens*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
